[package]
name = "crawler"
version = "0.1.0"
authors = ["Alessio Martorelli <alessio.martorelli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
reqwest = "0.10.1"
tokio = { version = "0.2", features = ["full"] }
select = "0.4.3"
queues = "1.1.0"
url = "2.1.1"
regex = "1.3.3"